fix: release failed
Signed-off-by: homura <homura.dev@gmail.com>

--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -49,6 +49,9 @@ jobs:
       - name: Prepare repository
         run: git fetch --unshallow --prune --tags
 
+      - name: Unset header
+        run: git config --local --unset http.https://github.com/.extraheader
+
       - name: Build extension
         run: |
           npm run build:libs
