--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   ],
   "devDependencies": {
     "@auto-it/magic-zero": "10.43.0",
+    "@auto-it/npm": "10.43.0",
     "@auto-it/released": "10.43.0",
     "@auto-it/upload-assets": "10.43.0",
     "@babel/preset-env": "7.20.2",
@@ -84,6 +85,7 @@
   },
   "auto": {
     "plugins": [
+      "npm",
       "magic-zero",
       "released",
       [
