--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "name": "@nexus-wallet/nexus",
   "version": "0.0.1",
   "description": "An UTxO friendly wallet extension for CKB",
   "private": true,
@@ -31,6 +32,7 @@
     "husky": "8.0.3",
     "jest": "29.4.1",
     "jest-environment-jsdom": "29.4.1",
+    "lerna": "6.5.1",
     "lint-staged": "13.1.0",
     "npm-run-all": "4.1.5",
     "prettier": "2.8.3",
