chore: switch to git-tag pkg manager
Signed-off-by: homura <homura.dev@gmail.com>

--- a/package.json
+++ b/package.json
@@ -87,7 +87,7 @@
   "auto": {
     "plugins": [
       "magic-zero",
-      "npm",
+      "git-tag",
       "released",
       [
         "upload-assets",
