--- a/package.json
+++ b/package.json
@@ -32,7 +32,6 @@
     "husky": "8.0.3",
     "jest": "29.4.1",
     "jest-environment-jsdom": "29.4.1",
-    "lerna": "4.0.0",
     "lint-staged": "13.1.0",
     "npm-run-all": "4.1.5",
     "prettier": "2.8.3",
@@ -87,7 +86,7 @@
   "auto": {
     "plugins": [
       "magic-zero",
-      "git-tag",
+      "npm",
       "released",
       [
         "upload-assets",
