--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -57,6 +57,11 @@ jobs:
         with:
           submodules: recursive
 
+      - name: Set up git
+        run: |
+          git config user.name github-actions
+          git config user.email github-actions@github.com
+
       - uses: ./.github/actions/install-deps
 
       - name: Prepare repository
